--- a/app/views/posts/archives.html.erb
+++ b/app/views/posts/archives.html.erb
@@ -1,22 +1,78 @@
+<!-- NAVIGATION -->
+
+<div class="nav-header">
+  
+</div>
+
+<nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+  </div>
+
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse navbar-ex1-collapse">
+    <ul class="nav navbar-nav">
+      <li><div class="logo">STEM News</div></li>
+      <li class="nav-home"><a href="<%= posts_path %>">HOME</a></li>
+	  <li class="nav-news"><a href="/news">NEWS</a></li>
+	  <li class="nav-studentlife"><a href="/studentlife">STUDENT LIFE</a></li>
+	  <li class="nav-opinion"><a href="/opinion">OPINION</a></li>
+	  <li class="nav-community"><a href="/community">COMMUNITY</a></li>
+      <li class="active nav-archives"><a href="/archives">ARCHIVES</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a class="nav-top-border" href="/posts/new">SUBMIT POST</a></li>
+      <li class="nav-top-border dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">ACTIONS<b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="/admin">Edit Articles</a></li>
+        </ul>
+      </li>
+    </ul>
+  </div><!-- /.navbar-collapse -->
+</nav>
+
 <!-- HEADER -->
 
-<img class="header-image hidden-xs hidden-sm" src="assets/stemnewsheader.jpg"/>
-
-
+<div class="header-image visible-lg"></div>
 
 <div class="main-body">
 <div class="main-background">
 
-<!-- NAVIGATION -->
+<div class="container">
+<div class="content-wrapper">
 
-<ul class="nav nav-tabs hidden-xs hidden-sm">
-  <li><a href="<%= posts_path %>">Home</a></li>
-  <li><a href="/news">News</a></li>
-  <li><a href="/studentlife">Student Life</a></li>
-  <li><a href="/opinion">Opinion</a></li>
-  <li><a href="/community">Community</a></li>
-  <li class="active"><a href="/archives">Archives</a></li>
-</ul>
-</br>
-</br>
-</br>
+<div class="row">
+  <div class="col-md-8">
+	<% i = 0 %>
+	<% @post.reverse.each do |post| %>
+	  <% i += 1 %>
+	  <% if post.edited != 1 || post.category != "Archives" %>
+		<% i -= 1 %>
+		<% next %>
+	  <% end %>
+		  <div class="post-archives">
+			<p><a href="posts/<%= post.id %>" class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+			<p><strong><%= post.title %></strong></p>
+			<p>By: <%= post.author %></p>
+			<p><%= post.summary %></p>
+			<div class="post-options">
+			  <a class="category-archives" href="posts/<%= post.id %>">Read More</a>
+			</div>
+		  </div><br>
+	<% end %>
+  </div>
+  <div class="col-md-4">
+  </div>
+</div>
+
+</div>
+</div>
+</div>
+</div>
