--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,9 @@
 <!-- NAVIGATION -->
 
+<div class="nav-header">
+  
+</div>
+
 <nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
@@ -9,33 +13,25 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand">STEM News</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
-      <li class="active"><a href="<%= posts_path %>">Home</a></li>
-      <li><a href="/archives">Archives</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="/news">News</a></li>
-          <li><a href="/studentlife">Student Life</a></li>
-          <li><a href="/opinion">Opinion</a></li>
-          <li><a href="/community">Community</a></li>
-        </ul>
-      </li>
+      <li><div class="logo">STEM News</div></li>
+      <li class="active nav-home"><a href="<%= posts_path %>">HOME</a></li>
+	  <li class="nav-news"><a href="/news">NEWS</a></li>
+	  <li class="nav-studentlife"><a href="/studentlife">STUDENT LIFE</a></li>
+	  <li class="nav-opinion"><a href="/opinion">OPINION</a></li>
+	  <li class="nav-community"><a href="/community">COMMUNITY</a></li>
+      <li class="nav-archives"><a href="/archives">ARCHIVES</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="/posts/new">Submit Post</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Actions<b class="caret"></b></a>
+      <li><a class="nav-top-border" href="/posts/new">SUBMIT POST</a></li>
+      <li class="nav-top-border dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">ACTIONS<b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="/admin">Edit Articles</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li><a href="#">Separated link</a></li>
         </ul>
       </li>
     </ul>
@@ -44,12 +40,13 @@
 
 <!-- HEADER -->
 
-<img class="header-image visible-lg" src="assets/stemnewsheader.jpg"/>
+<div class="header-image visible-lg"></div>
 
 <div class="main-body">
 <div class="main-background">
 
-<div class="media-fix hidden-lg"></div>
+<div class="container">
+<div class="content-wrapper">
 
 <!-- PRIMARY ARTICLE -->
 
@@ -64,7 +61,7 @@
 <div class="row">
 	<div class="col-md-4">
 		<div class="post-main post-large visible-lg">
-			<p><a class="thumbnail hidden-xs hidden-sm"><%= image_tag post.image_url.to_s %></a></p>
+			<p><a class="thumbnail hidden-xs hidden-sm" href="posts/<%= post.id %>"><%= image_tag post.image_url.to_s %></a></p>
 			<h2><strong><%= post.title %></strong></h2>
 			<p>By: <%= post.author %></p>
 			<p><%= post.summary %></p>
@@ -88,7 +85,7 @@
 
 <!-- NEWS CATEGORY -->
 <div class="col-md-4">
-<p><strong> News </strong></p>
+<p><a class="category-news" href="/news"><strong> News </strong></a></p>
 
 <% i = 0 %>
 
@@ -110,12 +107,12 @@
 <% end %>
 
 	<div class="post post-news">
-	  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+	  <p><a href="posts/<%= post.id %>" class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
 	  <p><strong><%= post.title %></strong></p>
 	  <p>By: <%= post.author %></p>
 	  <p><%= post.summary %></p>
 	  <div class="post-options">
-		<%= link_to 'Read More', post %>
+		<a class="category-news" href="posts/<%= post.id %>">Read More</a>
 	  </div>
 	</div><br>
 
@@ -125,7 +122,7 @@
 
 <!-- STUDENT LIFE CATEGORY -->
 <div class="col-md-4">
-<p><strong> Student Life </strong></p>
+<p><a class="category-studentlife" href="/studentlife"><strong> Student Life </strong></a></p>
 
 <% i = 0 %>
 
@@ -147,12 +144,12 @@
 <% end %>
 
 	<div class="post post-studentlife">
-	  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+	  <p><a href="posts/<%= post.id %>" class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
 	  <p><strong><%= post.title %></strong></p>
 	  <p>By: <%= post.author %></p>
 	  <p><%= post.summary %></p>
 	  <div class="post-options">
-		<%= link_to 'Read More', post %>
+		<a class="category-studentlife" href="posts/<%= post.id %>">Read More</a>
 	  </div>
 	</div><br>
 
@@ -164,7 +161,7 @@
 
 <!-- OPINION CATEGORY -->
 <div class="col-md-4">
-<p><strong> Opinion </strong></p>
+<p><a class="category-opinion" href="/opinion"><strong> Opinion </strong></a></p>
 
 <% i = 0 %>
 
@@ -186,12 +183,12 @@
 <% end %>
 
 	<div class="post post-opinion">
-	  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+	  <p><a href="posts/<%= post.id %>" class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
 	  <p><strong><%= post.title %></strong></p>
 	  <p>By: <%= post.author %></p>
 	  <p><%= post.summary %></p>
 	  <div class="post-options">
-		<%= link_to 'Read More', post %>
+		<a class="category-opinion" href="posts/<%= post.id %>">Read More</a>
 	  </div>
 	</div><br>
 
@@ -200,7 +197,7 @@
 
 <!-- COMMUNITY CATEGORY -->
 <div class="col-md-4">
-<p><strong> Community </strong></p>
+<p><a class="category-community" href="/community"><strong> Community </strong></a></p>
 
 <% i = 0 %>
 
@@ -222,12 +219,12 @@
 <% end %>
 
 	<div class="post post-community">
-	  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+	  <p><a href="posts/<%= post.id %>" class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
 	  <p><strong><%= post.title %></strong></p>
 	  <p>By: <%= post.author %></p>
 	  <p><%= post.summary %></p>
 	  <div class="post-options">
-		<%= link_to 'Read More', post %>
+		<a class="category-community" href="posts/<%= post.id %>">Read More</a>
 	  </div>
 	</div><br>
 
@@ -236,7 +233,7 @@
 
 <!-- ARCHIVES CATEGORY -->
 <div class="col-md-4">
-<p><strong> Archives </strong></p>
+<p><a class="category-archives" href="/archives"><strong> Archives </strong></a></p>
 
 <% i = 0 %>
 
@@ -258,12 +255,12 @@
 <% end %>
 
 	<div class="post post-archives">
-	  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+	  <p><a href="posts/<%= post.id %>" class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
 	  <p><strong><%= post.title %></strong></p>
 	  <p>By: <%= post.author %></p>
 	  <p><%= post.summary %></p>
 	  <div class="post-options">
-		<%= link_to 'Read More', post %>
+		<a class="category-archives" href="posts/<%= post.id %>">Read More</a>
 	  </div>
 	</div><br>
 
@@ -271,11 +268,11 @@
 </div>
 
 </div>
-
-<div class="post-options"><a href="/posts/new">Submit Post</a></div>
-<div class="post-options"><a href="/admin">Editor Sign-in</a></div>
-
 </div>
+</div>
+</div>
+
+<!-- Closing container and content-wrapper divs -->
 </div>
 </div>
 
