--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -22,6 +22,10 @@
     width: 200px;
 }
 
+.thumbnail:hover {
+	background-color: white;
+}
+
 // =================================
 // PAGE LAYOUT
 // ================================= 
